1.0.1 (unreleased)
==================

- Nothing changed yet.


1.0.0 (2020-08-03)
==================

- Fix to run under Windows with Python 3.
  [nilshofer, jensens]

0.16 (2013-02-18)
=================

- Fix packaging error.
  [davisagli]

- Fix tests to work with buildout 2.
  [davisagli]

0.15 (2012-05-12)
=================

- Integration with Travis CI for running tests and pep8/pyflakes.
  [hvelarde]

- PEP 8/Pyflakes.
  [hvelarde]

- Optimized unlinking of junctioned dirs on Windows.
  [lck]

0.14 (2012-04-30)
=================

- Change the approach to building the omelette using NTFS junctions
  on Windows. This is now done via the ``ntfsutils`` package, rather
  than relying on junction.exe.
  [lck]

0.13 (2012-04-14)
=================

- Added forward-compatibility with Python 3.
  [mitchell]

0.12 (2011-09-08)
=================

- Replaced os.popen with subprocess equivalent
  [tom_gross]

- Quote path on windows to handle paths with spaces correctly
  [tom_gross]

0.11 (2011-07-18)
=================

- Sort top_level metadata to avoid error building omelette if they are out of
  order.  Fixes https://bugs.launchpad.net/collective.buildout/+bug/553005.
  Thanks to Leonardo Rochael Almeida.
  [davisagli]

0.10 (2010-11-22)
=================

- Provide an update function (equivalent to install) to avoid spurious "recipe
  "doesn't define an update method" warning.
  [davisagli]

- Print a warning rather than aborting the buildout if junction.exe is missing
  on Windows.
  [davisagli]

- Made the tests compatible with a zc.buildout installed with Distribute
  rather than Setuptools.
  [pumazi]

- Handle OSErrors on symlink and warn the user. MacOSX can raise OSError due
  to an existing file here even if os.path.exists returns False.
  [MatthewWilkes]

- Include modules from namespace packages in the omelette. (Namespace packages
  cannot define anything in __init__.py, but they can contain modules.)
  [hathawsh]
