@@ -1,7 +1,10 @@
 1.0.1 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Sourcecode-Formatting via Black  [goschtl]
+- Fix 2to3 old setuptools hook [goschtl]
+- mordernize to python3 code [goschtl]
+- update to new zope.testing [goschtl]
 
 
 1.0.0 (2020-08-03)
